--- a/css_basic/tweets.html
+++ b/css_basic/tweets.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Tweets</title>
 
+    <!-- Link to CSS files -->
+    <link href="base.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
+</head>
+<body>
+    <header>
+        <h1>My Favorite Tweets</h1>
+    </header>
+
+    <main>
+        <article>
+            <h2>Tweet 1</h2>
+            <p>"Learning HTML and CSS is fun!" - @Katlego</p>
+        </article>
+
+        <article>
+            <h2>Tweet 2</h2>
+            <p>"GitHub makes collaboration so much easier!" - @ALX</p>
+        </article>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 ALX Project</p>
+    </footer>
+</body>
+</html>
